--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.profiles.active=dev
 
-jwt.secret=chavePARAassinarTOKEN
+jwt.secret=AssinaturaTokenTCCLOJAsim
 jwt.expiration=86400000
 
-default.sender=danielsouza553@gmail.com
-default.recipient=danielsouza553@gmail.com
+default.sender=daniel.software.notification@gmail.com
+default.recipient=daniel.software.notification@gmail.com
 
 aws.access_key_id=AKIAJJ6DD6GDHBCPRA5A
 aws.secret_access_key=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
