--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,8 +5,8 @@ spring.jpa.properties.hibernate.format_sql=false
 
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=danielsouza553@gmail.com
-spring.mail.password=
+spring.mail.username=daniel.software.notification@gmail.com
+spring.mail.password=DANIEL@SOFTWARE
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
