--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,14 +2,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/lojavirtual
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=danielsouza553@gmail.com
-spring.mail.password=
+spring.mail.username=daniel.software.notification@gmail.com
+spring.mail.password=DANIEL@SOFTWARE
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
